# CMF4All

./: .gitignore  README.md  cmf4all.ipynb  pyproject.toml  tables.ipynb
cmf4all/: __init__.py  mass_function.py  paths.py  plotting.py  relations.py  survey.py
cmf_zoo/: .gitignore
cmf_zoo/data/catalogues/: almagal.csv  almaimf.csv  aquila.csv  ashes.csv  cmz.csv  lancet.csv  lmc.csv  quarks.csv
cmf_zoo/data/download/: ASHES_core_share_small.csv  Konyves+2015.fit  W49A_masses.csv  apj_table3_full.tex  apjad9f28t1_mrt.txt  coletta+2025.fit  louvet+2024.fit  morii+2023.fit  traficante+2026.txt
cmf_zoo/data/literature_curves/: example_digitized_curve.csv
cmf_zoo/data/metadata/: surveys.yaml
examples/: survey_diagnostics.py
tests/: test_mass_function.py  test_plotting.py  test_survey.py
